src/anim/snapshots/qorrection__anim__render__tests__fallback_wq_39.snap
---
source: src/anim/render.rs
expression: snapshot_frames(&plan.frames)
---
--- frame 000 ---
<ESC>[1;1H<ESC>[2J[QQ] :wq -- 418 I'm an AI agent.
