src/anim/snapshots/qorrection__anim__render__tests__tiny_bang_40.snap
---
source: src/anim/render.rs
expression: snapshot_frames(&plan.frames)
---
--- frame 000 ---
<ESC>[1;1H<ESC>[2J


)

--- frame 001 ---
<ESC>[1;1H<ESC>[2J


o)

--- frame 002 ---
<ESC>[1;1H<ESC>[2J
_
|
(o)

--- frame 003 ---
<ESC>[1;1H<ESC>[2J_
]_
 |
=(o)

--- frame 004 ---
<ESC>[1;1H<ESC>[2J__
Q]_
  |
)=(o)

--- frame 005 ---
<ESC>[1;1H<ESC>[2J___
QQ]_
   |
o)=(o)

--- frame 006 ---
<ESC>[1;1H<ESC>[2J ___
[QQ]_
|   |
(o)=(o)

--- frame 007 ---
<ESC>[1;1H<ESC>[2J  ___
 [QQ]_
 |   |
=(o)=(o)

--- frame 008 ---
<ESC>[1;1H<ESC>[2J   ___
  [QQ]_
  |   |
)=(o)=(o)

--- frame 009 ---
<ESC>[1;1H<ESC>[2J    ___
   [QQ]_
   |   |
o)=(o)=(o)

--- frame 010 ---
<ESC>[1;1H<ESC>[2J     ___
_   [QQ]_
|   |   |
(o)=(o)=(o)

--- frame 011 ---
<ESC>[1;1H<ESC>[2J_     ___
]_   [QQ]_
 |   |   |
=(o)=(o)=(o)

--- frame 012 ---
<ESC>[1;1H<ESC>[2J__     ___
Q]_   [QQ]_
  |   |   |
)=(o)=(o)=(o)

--- frame 013 ---
<ESC>[1;1H<ESC>[2J___     ___
QQ]_   [QQ]_
   |   |   |
o)=(o)=(o)=(o)

--- frame 014 ---
<ESC>[1;1H<ESC>[2J ___     ___
[QQ]_   [QQ]_
|   |   |   |
(o)=(o)=(o)=(o)

--- frame 015 ---
<ESC>[1;1H<ESC>[2J  ___     ___
 [QQ]_   [QQ]_
 |   |   |   |
=(o)=(o)=(o)=(o)

--- frame 016 ---
<ESC>[1;1H<ESC>[2J   ___     ___
  [QQ]_   [QQ]_
  |   |   |   |
)=(o)=(o)=(o)=(o)

--- frame 017 ---
<ESC>[1;1H<ESC>[2J    ___     ___
   [QQ]_   [QQ]_
   |   |   |   |
o)=(o)=(o)=(o)=(o)

--- frame 018 ---
<ESC>[1;1H<ESC>[2J     ___     ___
_   [QQ]_   [QQ]_
|   |   |   |   |
(o)=(o)=(o)=(o)=(o)

--- frame 019 ---
<ESC>[1;1H<ESC>[2J_     ___     ___
]_   [QQ]_   [QQ]_
 |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)

--- frame 020 ---
<ESC>[1;1H<ESC>[2J__     ___     ___
Q]_   [QQ]_   [QQ]_
  |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)

--- frame 021 ---
<ESC>[1;1H<ESC>[2J___     ___     ___
QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)

--- frame 022 ---
<ESC>[1;1H<ESC>[2J ___     ___     ___
[QQ]_   [QQ]_   [QQ]_
|   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)

--- frame 023 ---
<ESC>[1;1H<ESC>[2J  ___     ___     ___
 [QQ]_   [QQ]_   [QQ]_
 |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 024 ---
<ESC>[1;1H<ESC>[2J   ___     ___     ___
  [QQ]_   [QQ]_   [QQ]_
  |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 025 ---
<ESC>[1;1H<ESC>[2J    ___     ___     ___
   [QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 026 ---
<ESC>[1;1H<ESC>[2J     ___     ___     ___
_   [QQ]_   [QQ]_   [QQ]_
|   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 027 ---
<ESC>[1;1H<ESC>[2J_     ___     ___     ___
]_   [QQ]_   [QQ]_   [QQ]_
 |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 028 ---
<ESC>[1;1H<ESC>[2J__     ___     ___     ___
Q]_   [QQ]_   [QQ]_   [QQ]_
  |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 029 ---
<ESC>[1;1H<ESC>[2J___     ___     ___     ___
QQ]_   [QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 030 ---
<ESC>[1;1H<ESC>[2J ___     ___     ___     ___
[QQ]_   [QQ]_   [QQ]_   [QQ]_
|   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 031 ---
<ESC>[1;1H<ESC>[2J  ___     ___     ___     ___
 [QQ]_   [QQ]_   [QQ]_   [QQ]_
 |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 032 ---
<ESC>[1;1H<ESC>[2J   ___     ___     ___     ___
  [QQ]_   [QQ]_   [QQ]_   [QQ]_
  |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 033 ---
<ESC>[1;1H<ESC>[2J    ___     ___     ___     ___
   [QQ]_   [QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 034 ---
<ESC>[1;1H<ESC>[2J     ___     ___     ___     ___
_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
|   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 035 ---
<ESC>[1;1H<ESC>[2J_     ___     ___     ___     ___
]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
 |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 036 ---
<ESC>[1;1H<ESC>[2J__     ___     ___     ___     ___
Q]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
  |   |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 037 ---
<ESC>[1;1H<ESC>[2J___     ___     ___     ___     ___
QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 038 ---
<ESC>[1;1H<ESC>[2J ___     ___     ___     ___     ___
[QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
|   |   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 039 ---
<ESC>[1;1H<ESC>[2J  ___     ___     ___     ___     ___
 [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
 |   |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 040 ---
<ESC>[1;1H<ESC>[2J   ___     ___     ___     ___     ___
  [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
  |   |   |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 041 ---
<ESC>[1;1H<ESC>[2J    ___     ___     ___     ___     ___
   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 042 ---
<ESC>[1;1H<ESC>[2J     ___     ___     ___     ___     ___
_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]
|   |   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 043 ---
<ESC>[1;1H<ESC>[2J_     ___     ___     ___     ___     __
]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ
 |   |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 044 ---
<ESC>[1;1H<ESC>[2J__     ___     ___     ___     ___     _
Q]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [Q
  |   |   |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 045 ---
<ESC>[1;1H<ESC>[2J___     ___     ___     ___     ___
QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [
   |   |   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 046 ---
<ESC>[1;1H<ESC>[2J ___     ___     ___     ___     ___
[QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
|   |   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 047 ---
<ESC>[1;1H<ESC>[2J  ___     ___     ___     ___     ___
 [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
 |   |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 048 ---
<ESC>[1;1H<ESC>[2J   ___     ___     ___     ___     ___
  [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
  |   |   |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 049 ---
<ESC>[1;1H<ESC>[2J    ___     ___     ___     ___     ___
   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 050 ---
<ESC>[1;1H<ESC>[2J     ___     ___     ___     ___     ___
_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]
|   |   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 051 ---
<ESC>[1;1H<ESC>[2J_     ___     ___     ___     ___     __
]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ
 |   |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 052 ---
<ESC>[1;1H<ESC>[2J__     ___     ___     ___     ___     _
Q]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [Q
  |   |   |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 053 ---
<ESC>[1;1H<ESC>[2J___     ___     ___     ___     ___
QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [
   |   |   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 054 ---
<ESC>[1;1H<ESC>[2J ___     ___     ___     ___     ___
[QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
|   |   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 055 ---
<ESC>[1;1H<ESC>[2J  ___     ___     ___     ___     ___
 [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
 |   |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 056 ---
<ESC>[1;1H<ESC>[2J   ___     ___     ___     ___     ___
  [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
  |   |   |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 057 ---
<ESC>[1;1H<ESC>[2J    ___     ___     ___     ___     ___
   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 058 ---
<ESC>[1;1H<ESC>[2J     ___     ___     ___     ___     ___
_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]
|   |   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 059 ---
<ESC>[1;1H<ESC>[2J_     ___     ___     ___     ___     __
]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ
 |   |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 060 ---
<ESC>[1;1H<ESC>[2J__     ___     ___     ___     ___     _
Q]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [Q
  |   |   |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 061 ---
<ESC>[1;1H<ESC>[2J___     ___     ___     ___     ___
QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [
   |   |   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 062 ---
<ESC>[1;1H<ESC>[2J ___     ___     ___     ___     ___
[QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
|   |   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 063 ---
<ESC>[1;1H<ESC>[2J  ___     ___     ___     ___     ___
 [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
 |   |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 064 ---
<ESC>[1;1H<ESC>[2J   ___     ___     ___     ___     ___
  [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
  |   |   |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 065 ---
<ESC>[1;1H<ESC>[2J    ___     ___     ___     ___     ___
   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 066 ---
<ESC>[1;1H<ESC>[2J     ___     ___     ___     ___     ___
_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]
|   |   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 067 ---
<ESC>[1;1H<ESC>[2J_     ___     ___     ___     ___     __
]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ
 |   |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 068 ---
<ESC>[1;1H<ESC>[2J__     ___     ___     ___     ___     _
Q]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [Q
  |   |   |   |   |   |   |   |   |   |
)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 069 ---
<ESC>[1;1H<ESC>[2J___     ___     ___     ___     ___
QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [
   |   |   |   |   |   |   |   |   |   |
o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 070 ---
<ESC>[1;1H<ESC>[2J ___     ___     ___     ___     ___
[QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
|   |   |   |   |   |   |   |   |   |
(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 071 ---
<ESC>[1;1H<ESC>[2J  ___     ___     ___     ___     ___
 [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
 |   |   |   |   |   |   |   |   |   |
=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 072 ---
<ESC>[1;1H<ESC>[2J   ___     ___     ___     ___     ___
  [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
  |   |   |   |   |   |   |   |   |   |
 =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 073 ---
<ESC>[1;1H<ESC>[2J    ___     ___     ___     ___     ___
   [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]_
   |   |   |   |   |   |   |   |   |   |
  =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 074 ---
<ESC>[1;1H<ESC>[2J     ___     ___     ___     ___     ___
    [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ]
    |   |   |   |   |   |   |   |   |
   =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 075 ---
<ESC>[1;1H<ESC>[2J      ___     ___     ___     ___     __
     [QQ]_   [QQ]_   [QQ]_   [QQ]_   [QQ
     |   |   |   |   |   |   |   |   |
    =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 076 ---
<ESC>[1;1H<ESC>[2J       ___     ___     ___     ___     _
      [QQ]_   [QQ]_   [QQ]_   [QQ]_   [Q
      |   |   |   |   |   |   |   |   |
     =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 077 ---
<ESC>[1;1H<ESC>[2J        ___     ___     ___     ___
       [QQ]_   [QQ]_   [QQ]_   [QQ]_   [
       |   |   |   |   |   |   |   |   |
      =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 078 ---
<ESC>[1;1H<ESC>[2J         ___     ___     ___     ___
        [QQ]_   [QQ]_   [QQ]_   [QQ]_
        |   |   |   |   |   |   |   |
       =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 079 ---
<ESC>[1;1H<ESC>[2J          ___     ___     ___     ___
         [QQ]_   [QQ]_   [QQ]_   [QQ]_
         |   |   |   |   |   |   |   |
        =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 080 ---
<ESC>[1;1H<ESC>[2J           ___     ___     ___     ___
          [QQ]_   [QQ]_   [QQ]_   [QQ]_
          |   |   |   |   |   |   |   |
         =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 081 ---
<ESC>[1;1H<ESC>[2J            ___     ___     ___     ___
           [QQ]_   [QQ]_   [QQ]_   [QQ]_
           |   |   |   |   |   |   |   |
          =(o)=(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 082 ---
<ESC>[1;1H<ESC>[2J             ___     ___     ___     ___
            [QQ]_   [QQ]_   [QQ]_   [QQ]
            |   |   |   |   |   |   |
           =(o)=(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 083 ---
<ESC>[1;1H<ESC>[2J              ___     ___     ___     __
             [QQ]_   [QQ]_   [QQ]_   [QQ
             |   |   |   |   |   |   |
            =(o)=(o)=(o)=(o)=(o)=(o)=(o)

--- frame 084 ---
<ESC>[1;1H<ESC>[2J               ___     ___     ___     _
              [QQ]_   [QQ]_   [QQ]_   [Q
              |   |   |   |   |   |   |
             =(o)=(o)=(o)=(o)=(o)=(o)=(o

--- frame 085 ---
<ESC>[1;1H<ESC>[2J                ___     ___     ___
               [QQ]_   [QQ]_   [QQ]_   [
               |   |   |   |   |   |   |
              =(o)=(o)=(o)=(o)=(o)=(o)=(

--- frame 086 ---
<ESC>[1;1H<ESC>[2J                 ___     ___     ___
                [QQ]_   [QQ]_   [QQ]_
                |   |   |   |   |   |
               =(o)=(o)=(o)=(o)=(o)=(o)=

--- frame 087 ---
<ESC>[1;1H<ESC>[2J                  ___     ___     ___
                 [QQ]_   [QQ]_   [QQ]_
                 |   |   |   |   |   |
                =(o)=(o)=(o)=(o)=(o)=(o)

--- frame 088 ---
<ESC>[1;1H<ESC>[2J                   ___     ___     ___
                  [QQ]_   [QQ]_   [QQ]_
                  |   |   |   |   |   |
                 =(o)=(o)=(o)=(o)=(o)=(o

--- frame 089 ---
<ESC>[1;1H<ESC>[2J                    ___     ___     ___
                   [QQ]_   [QQ]_   [QQ]_
                   |   |   |   |   |   |
                  =(o)=(o)=(o)=(o)=(o)=(

--- frame 090 ---
<ESC>[1;1H<ESC>[2J                     ___     ___     ___
                    [QQ]_   [QQ]_   [QQ]
                    |   |   |   |   |
                   =(o)=(o)=(o)=(o)=(o)=

--- frame 091 ---
<ESC>[1;1H<ESC>[2J                      ___     ___     __
                     [QQ]_   [QQ]_   [QQ
                     |   |   |   |   |
                    =(o)=(o)=(o)=(o)=(o)

--- frame 092 ---
<ESC>[1;1H<ESC>[2J                       ___     ___     _
                      [QQ]_   [QQ]_   [Q
                      |   |   |   |   |
                     =(o)=(o)=(o)=(o)=(o

--- frame 093 ---
<ESC>[1;1H<ESC>[2J                        ___     ___
                       [QQ]_   [QQ]_   [
                       |   |   |   |   |
                      =(o)=(o)=(o)=(o)=(

--- frame 094 ---
<ESC>[1;1H<ESC>[2J                         ___     ___
                        [QQ]_   [QQ]_
                        |   |   |   |
                       =(o)=(o)=(o)=(o)=

--- frame 095 ---
<ESC>[1;1H<ESC>[2J                          ___     ___
                         [QQ]_   [QQ]_
                         |   |   |   |
                        =(o)=(o)=(o)=(o)

--- frame 096 ---
<ESC>[1;1H<ESC>[2J                           ___     ___
                          [QQ]_   [QQ]_
                          |   |   |   |
                         =(o)=(o)=(o)=(o

--- frame 097 ---
<ESC>[1;1H<ESC>[2J                            ___     ___
                           [QQ]_   [QQ]_
                           |   |   |   |
                          =(o)=(o)=(o)=(

--- frame 098 ---
<ESC>[1;1H<ESC>[2J                             ___     ___
                            [QQ]_   [QQ]
                            |   |   |
                           =(o)=(o)=(o)=

--- frame 099 ---
<ESC>[1;1H<ESC>[2J                              ___     __
                             [QQ]_   [QQ
                             |   |   |
                            =(o)=(o)=(o)

--- frame 100 ---
<ESC>[1;1H<ESC>[2J                               ___     _
                              [QQ]_   [Q
                              |   |   |
                             =(o)=(o)=(o

--- frame 101 ---
<ESC>[1;1H<ESC>[2J                                ___
                               [QQ]_   [
                               |   |   |
                              =(o)=(o)=(

--- frame 102 ---
<ESC>[1;1H<ESC>[2J                                 ___
                                [QQ]_
                                |   |
                               =(o)=(o)=

--- frame 103 ---
<ESC>[1;1H<ESC>[2J                                  ___
                                 [QQ]_
                                 |   |
                                =(o)=(o)

--- frame 104 ---
<ESC>[1;1H<ESC>[2J                                   ___
                                  [QQ]_
                                  |   |
                                 =(o)=(o

--- frame 105 ---
<ESC>[1;1H<ESC>[2J                                    ___
                                   [QQ]_
                                   |   |
                                  =(o)=(

--- frame 106 ---
<ESC>[1;1H<ESC>[2J                                     ___
                                    [QQ]
                                    |
                                   =(o)=

--- frame 107 ---
<ESC>[1;1H<ESC>[2J                                      __
                                     [QQ
                                     |
                                    =(o)

--- frame 108 ---
<ESC>[1;1H<ESC>[2J                                       _
                                      [Q
                                      |
                                     =(o

--- frame 109 ---
<ESC>[1;1H<ESC>[2J
                                       [
                                       |
                                      =(

--- frame 110 ---
<ESC>[1;1H<ESC>[2J


                                       =
